--- a/style.css
+++ b/style.css
@@ -120,16 +120,20 @@ hr{
         flex-direction: column;
     }
     
-    /* tablet devices */
-    @media only screen and (min-width:688px) and (max-width:992px) {
-        
-            .players, .blogs, .courses{
-       
-                grid-template-columns: repeat(2,1fr);
-        }
+  
         
     }
-}
 
+  /* tablet devices */
+  @media only screen and (min-width:688px) and (max-width:992px) {
+      .container{
+          width: 100%;
+      }
+      .players, .courses{
+        grid-template-columns: repeat(2,1fr);
+      }
+        
+           
+}
 
 
